--- a/olfcell/data/OlfCellApp_config.yaml
+++ b/olfcell/data/OlfCellApp_config.yaml
@@ -15,6 +15,37 @@ mfcs:
   virtual: true
 n_mfc: 2
 n_valve_boards: 2
+player:
+  ffmpeg:
+    dshow_filename: ''
+    dshow_opt: ''
+    dshow_rate: 0
+    dshow_true_filename: ''
+    file_fmt: ''
+    icodec: ''
+    metadata_play:
+    - ''
+    - 0
+    - 0
+    - 0
+    metadata_play_used:
+    - rgb24
+    - 640
+    - 480
+    - 30.00003000003
+    play_filename: ''
+    use_dshow: true
+  video_recorder:
+    estimate_record_rate: false
+    metadata_record:
+    - ''
+    - 0
+    - 0
+    - 0
+    record_directory: C:\
+    record_fname: video{}.mkv
+    record_fname_count: 0
+    requested_record_duration: 0
 rpi_pins:
   current_pin: 0
   remote_port: 0
